--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/weather_app_background"
     tools:context=".MainActivity"
-    android:padding="10dp">
+    android:padding="1dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -20,7 +20,6 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="20dp"
-            android:padding="2dp"
             android:background="@drawable/rounded_border"
             android:gravity="center_horizontal">
 
@@ -37,7 +36,8 @@
                 android:inputType="text"
                 android:textColor="#ffffff"
                 android:textColorHint="#939393"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <ImageView
                 android:id="@+id/search"
@@ -311,78 +311,6 @@
 
             </LinearLayout>
 
-<!--            <LinearLayout-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="120dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:gravity="start"-->
-<!--                    android:text="Temperature"-->
-<!--                    android:textColor="@color/text1"-->
-<!--                    android:textSize="15sp"-->
-<!--                    android:layout_marginStart="5dp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:textStyle="bold" />-->
-<!--                <ImageView-->
-<!--                    android:layout_width="20dp"-->
-<!--                    android:layout_height="20dp"-->
-<!--                    android:src="@drawable/tem_down"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:layout_marginStart="38dp" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/min_temp"-->
-<!--                    android:layout_width="80dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:gravity="center"-->
-<!--                    android:padding="5dp"-->
-<!--                    android:text="&#45;&#45;"-->
-<!--                    android:layout_marginStart="80dp"-->
-<!--                    android:textColor="@color/text1"-->
-<!--                    android:textSize="16sp" />-->
-
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:gravity="start"-->
-<!--                    android:text="Max Temperature"-->
-<!--                    android:textColor="@color/text1"-->
-<!--                    android:textSize="15sp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:layout_marginStart="5dp"-->
-<!--                    android:textStyle="bold" />-->
-
-<!--                <ImageView-->
-<!--                    android:layout_width="20dp"-->
-<!--                    android:layout_height="20dp"-->
-<!--                    android:src="@drawable/tem_up"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:layout_marginStart="38dp" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/max_temp"-->
-<!--                    android:layout_width="80dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:gravity="center"-->
-<!--                    android:padding="5dp"-->
-<!--                    android:text="&#45;&#45;"-->
-<!--                    android:layout_marginStart="80dp"-->
-<!--                    android:textColor="@color/text1"-->
-<!--                    android:textSize="16sp"/>-->
-
-<!--            </LinearLayout>-->
 
         </LinearLayout>
 
